--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="grid_line_width">1dp</dimen>
     <dimen name="toolbar_text_size">14sp</dimen>
     <dimen name="swatch_elevation">4dp</dimen>
+    <dimen name="ip_view_offset">12dp</dimen>
 </resources>
