--- a/app/src/main/res/layout/widget_next.xml
+++ b/app/src/main/res/layout/widget_next.xml
@@ -2,7 +2,7 @@
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/view_widget_next"
+    android:id="@+id/view_widget_action"
     android:src="@drawable/ic_widget_next"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
