--- a/app/src/main/res/layout/activity_ip_setup.xml
+++ b/app/src/main/res/layout/activity_ip_setup.xml
@@ -61,26 +61,25 @@
         app:layout_anchorGravity="bottom|right|end"
         tools:ignore="RtlHardcoded" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/view_setup"
+    <com.savvasdalkitsis.gameframe.infra.view.ProgressFloatingActionButton
+        android:id="@+id/view_setup_fab_container"
+        android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_done_white_48px"
-        app:fabSize="normal"
-        tools:ignore="RtlHardcoded" />
-
-    <com.dmitrymalkovich.android.ProgressFloatingActionButton
-        android:id="@+id/view_cancel_discover"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:clickable="true"
-        app:layout_anchor="@id/view_setup"
-        app:layout_anchorGravity="center"
         tools:ignore="RtlHardcoded">
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/view_setup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_done_white_48px"
+            app:fabSize="normal"
+            tools:ignore="RtlHardcoded" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/view_cancel_discover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_clear_white_48px"
@@ -89,9 +88,10 @@
 
         <ProgressBar
             style="@style/Widget.AppCompat.ProgressBar"
+            android:id="@+id/view_fab_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-    </com.dmitrymalkovich.android.ProgressFloatingActionButton>
+    </com.savvasdalkitsis.gameframe.infra.view.ProgressFloatingActionButton>
 
 </android.support.design.widget.CoordinatorLayout>
