--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="toolbar_text_size">14sp</dimen>
     <dimen name="swatch_elevation">4dp</dimen>
     <dimen name="ip_view_offset">12dp</dimen>
+    <dimen name="progress_bar_size">0dp</dimen>
 </resources>
