--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,14 +30,33 @@
 
         </ViewSwitcher>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/view_fab"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="16dp"
-            app:fabSize="normal"
+
+        <com.savvasdalkitsis.gameframe.infra.view.ProgressFloatingActionButton
+            android:id="@+id/view_fab_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:ignore="RtlHardcoded" />
+            android:layout_gravity="bottom|right"
+            android:clickable="true"
+            tools:ignore="RtlHardcoded">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/view_fab"
+                android:layout_gravity="bottom|right"
+                android:layout_margin="16dp"
+                app:fabSize="normal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:ignore="RtlHardcoded" />
+
+            <ProgressBar
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:id="@+id/view_fab_progress"
+                android:scaleX="0"
+                android:scaleY="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </com.savvasdalkitsis.gameframe.infra.view.ProgressFloatingActionButton>
 
     </android.support.design.widget.CoordinatorLayout>
 
