Using the CircleView from the material dialogs library for a swatch

--- a/app/src/main/res/layout/view_palette.xml
+++ b/app/src/main/res/layout/view_palette.xml
@@ -3,14 +3,158 @@
     xmlns:grid="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/swatch_elevation"
+    android:padding="@dimen/swatch_margin"
     grid:columnCount="10"
     grid:rowCount="2">
 
     <com.savvasdalkitsis.gameframe.draw.view.SwatchView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
+        android:gravity="center"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill_horizontal" />
+
+    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/swatch_margin"
         android:background="@android:color/holo_red_dark"
         android:gravity="center"
         grid:layout_columnWeight="1"
@@ -19,170 +163,7 @@
     <com.savvasdalkitsis.gameframe.draw.view.SwatchView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        grid:layout_columnWeight="1"
-        grid:layout_gravity="fill_horizontal" />
-
-    <com.savvasdalkitsis.gameframe.draw.view.SwatchView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/swatch_elevation"
-        android:background="@android:color/holo_red_dark"
+        android:layout_margin="@dimen/swatch_margin"
         android:gravity="center"
         grid:layout_columnWeight="1"
         grid:layout_gravity="fill_horizontal" />
