--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <ImageButton
+        <com.savvasdalkitsis.gameframe.draw.view.PencilToolView
             android:id="@+id/view_draw_pencil"
             style="?attr/actionButtonStyle"
             android:src="@drawable/ic_create_black_48px"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             tools:ignore="ContentDescription,RtlHardcoded" />
 
-        <ImageButton
+        <com.savvasdalkitsis.gameframe.draw.view.FillToolView
             android:id="@+id/view_draw_fill"
             style="?attr/actionButtonStyle"
             android:src="@drawable/ic_format_color_fill_black_48px"
