First implementation of layers. Needs more work

--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -1,56 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/view_draw_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.savvasdalkitsis.gameframe.grid.view.LedGridView
-        android:id="@+id/view_draw_led_grid_view"
-        android:layout_margin="16dp"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/view_draw_palette"
-        layout="@layout/view_palette"
-        android:layout_below="@id/view_draw_led_grid_view"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="72dp"
-        android:layout_marginBottom="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        <com.savvasdalkitsis.gameframe.grid.view.LedGridView
+            android:id="@+id/view_draw_led_grid_view"
+            android:layout_margin="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <include
+            android:id="@+id/view_draw_palette"
+            layout="@layout/view_palette"
+            android:layout_below="@id/view_draw_led_grid_view"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="72dp"
+            android:layout_marginBottom="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="RtlHardcoded" />
+
+        <ImageView
+            android:id="@+id/view_draw_open_layers"
+            android:src="@drawable/ic_toc_black_48px"
+            style="?attr/actionButtonStyle"
+            android:layout_alignRight="@id/view_draw_led_grid_view"
+            android:layout_below="@id/view_draw_led_grid_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="ContentDescription,RtlHardcoded" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/view_draw_palette"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.savvasdalkitsis.gameframe.draw.view.PencilToolView
+                android:id="@+id/view_draw_pencil"
+                style="?attr/actionButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:ignore="ContentDescription,RtlHardcoded" />
+
+            <com.savvasdalkitsis.gameframe.draw.view.FillToolView
+                android:id="@+id/view_draw_fill"
+                style="?attr/actionButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:ignore="ContentDescription,RtlHardcoded" />
+
+            <com.savvasdalkitsis.gameframe.draw.view.ClearToolView
+                android:id="@+id/view_draw_clear"
+                style="?attr/actionButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:ignore="ContentDescription,RtlHardcoded" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/view_draw_layers"
+        android:background="@android:color/white"
+        android:scrollbars="vertical"
+        android:scrollbarStyle="insideOverlay"
+        android:layout_gravity="right"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
         tools:ignore="RtlHardcoded" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/view_draw_palette"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <com.savvasdalkitsis.gameframe.draw.view.PencilToolView
-            android:id="@+id/view_draw_pencil"
-            style="?attr/actionButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:ignore="ContentDescription,RtlHardcoded" />
-
-        <com.savvasdalkitsis.gameframe.draw.view.FillToolView
-            android:id="@+id/view_draw_fill"
-            style="?attr/actionButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:ignore="ContentDescription,RtlHardcoded" />
-
-        <com.savvasdalkitsis.gameframe.draw.view.ClearToolView
-            android:id="@+id/view_draw_clear"
-            style="?attr/actionButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:ignore="ContentDescription,RtlHardcoded" />
-    </LinearLayout>
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
