--- a/app/src/main/res/layout/view_layer_view.xml
+++ b/app/src/main/res/layout/view_layer_view.xml
@@ -5,8 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/view_layer_title"
+        android:layout_margin="16dp"
+        android:textColor="@android:color/black"
+        android:layout_marginLeft="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="RtlHardcoded" />
+
     <Spinner
         android:id="@+id/view_layer_blend_mode"
+        android:layout_below="@id/view_layer_title"
         android:gravity="right"
         android:layout_marginLeft="24dp"
         android:layout_width="match_parent"
